# rustguac

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  config.example.toml  install.sh  rustguac.spec
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
bench/: README.md  RESULTS.md  cleanup-vault.sh  collect-metrics.sh  guac-client.py  k6-addressbook.js  k6-session-burst.js  k6-session-ramp.js  populate-vault.sh
bench/xrdp-target/: setup.sh
contrib/: setup-rdp-performance.ps1  setup-xrdp-audio.sh  setup-xrdp-gfx.sh  vault-quickstart.sh
contrib/vdi-image-pulseaudio/: Dockerfile  README.md  entrypoint.sh
contrib/vdi-image-pulseaudio-x264/: Dockerfile  README.md  entrypoint.sh
contrib/vdi-test-image/: Dockerfile  README.md  entrypoint.sh
debian/: config.toml.default  control  postinst  rules  rustguac.service
docs/: api.md  configuration.md  credential-variables.md  deployment-guide.md  installation.md  integrations.md  migration.md  netbox.md  overview.md  rdp-video-performance.md  reports.md  reverse-proxies.md  roles-and-access-control.md  security.md  themes.md  vdi.md  web-sessions.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: protocol_parse.rs  protocol_stream.rs
patches/: 002-kerberos-nla.patch  003-null-guard-and-config-h.patch  003-null-guard-disp-size.patch  004-config-h-struct-layout.patch  004-h264-display-worker.patch  004-h264-passthrough.patch  005-rdp-resize-dirty-flush.patch  006-terminal-osc-consume.patch  007-rdp-disp-mod16.patch  README.md
screenshots/: screenshots.md
src/: api.rs  auth.rs  browser.rs  config.rs  db.rs  guacd.rs  import.rs  lib.rs  main.rs  oidc.rs  protocol.rs  recording.rs  session.rs  tunnel.rs  vault.rs  websocket.rs
src/vdi/: docker.rs  mod.rs
static/: addressbook.html  admin.html  client.html  connections.html  docs.html  index.html  recordings.html  reports.html  rustguac.css  sessions.html  tokens.html
static/guac/: Client.js  H264Decoder.js
static/themes/: catppuccin-macchiato.toml
